tdf#119882, don't change the chart model from the chart view

Change-Id: I1c909f6e1984bd4b09c3b67c19659dc276ac3229